test/tests/bad/conflicting-ctor-def_0.carth
;; ConflictingCtorDef

(data Foo Bar Bar)
